[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumaai-gradio"
version = "0.0.1"
description = "A Python package for creating Gradio applications with LumaAI models"
authors = [
    { name = "AK", email = "ahsen.khaliq@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio>=5.5.0",
    "lumaai"
]

[project.urls]
homepage = "https://github.com/AK391/lumaai-gradio"
repository = "https://github.com/AK391/lumaai-gradio"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["lumaai_gradio"]

